# my_strstre

./: .gitignore  CMakeLists.txt  main.c
include/: boyer_moore.h
src/: boyer_moore.c
tests/: test_boyer_moore.c
